Issue #410: Upgrades to support Java 9